Update file: பல்கலைக்கழகப் புகுமுக நிலை.md

--- a/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
+++ b/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
@@ -95,17 +95,13 @@ width:100%;
 </span></a><br /><br />
 <h4 id="C1"><span style="font-size:30px; font-family:Anjal New InaiMathi Sch Book; color:purple;">தாய்மொழியின் இலக்கு
  </span></h4>
-<p style="font-size:22px; font-family:Anjal New InaiMathi Sch Book;">வருங்காலச்   சிங்கப்பூர்த்   தமிழ்ச்   சந்ததியினரிடையே   தமிழ்   வாழும்   மொழியாகத்   திகழ   வேண்டும்.   பலவகைப்   பண்பாட்டுப்   பாரம்பரியத்தைக்   கொண்டு   உலக   நகராக   விளங்கும்   சிங்கப்பூரின்   தனித்தன்மைக்கு   வலுவூட்டும்   அம்சமாக   அது விளங்க   வேண்டும்.
-	
-	
+<p style="font-size:22px;text-align:justify;font-family:Anjal New InaiMathi Sch Book;">வருங்காலச்   சிங்கப்பூர்த்   தமிழ்ச்   சந்ததியினரிடையே   தமிழ்   வாழும்   மொழியாகத்   திகழ   வேண்டும்.   பலவகைப்   பண்பாட்டுப்   பாரம்பரியத்தைக்   கொண்டு   உலக   நகராக   விளங்கும்   சிங்கப்பூரின்   தனித்தன்மைக்கு   வலுவூட்டும்   அம்சமாக   அது விளங்க   வேண்டும்.
 <h4 id="C1"><span style="font-size:30px; font-family:Anjal New InaiMathi Sch Book; color:purple;">உயர்தரம் பாடக்கலைத்திட்டம் முக்கியத் தகவல்கள்
  </span></h4>
-	
-	
 <h4 style="padding-top: 24px; font-family:Anjal New InaiMathi Sch Book;">உயர்தரம் 1 பாடக்கலைத்திட்டத்தின் முக்கிய நோக்கங்கள்</h4>
-     <p><strong>மாணவர்கள் </strong></p>
+     <p><strong style="font-size:24px;">மாணவர்கள் </strong></p>
 <div class="row">
-  <div class="column">
+  <div class="column" style="font-size:22px;font-family:Anjal New InaiMathi Sch Book;">
   <ul>
   <li>தம் &nbsp; தாய்மொழியில் &nbsp; தன்னம்பிக்கையுடன் &nbsp; பேசுவதோடு &nbsp; மொழித்திறன்களையும் &nbsp; மேம்படுத்திக்கொள்வர்.
 </li>
@@ -124,15 +120,15 @@ width:100%;
 </div><br/><br/>
 <h4 style="font-family:Anjal New InaiMathi Sch Book;">உயர்தரம் 2 &amp; 3 பாடக்கலைத்திட்டத்தின் முக்கிய நோக்கங்கள்
 </h4>
-<p style="font-family:Anjal New InaiMathi Sch Book;"><strong>மாணவர்களை</strong></p>
+<p style="font-family:Anjal New InaiMathi Sch Book;font-size:24px;"><strong>மாணவர்களை</strong></p>
 <div class="row">
   <div class="column">
   <ul>
-  <li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">மொழித் &nbsp; திறன்களிலும் &nbsp; இலக்கியத் &nbsp; திறன்களிலும் &nbsp; மேம்பட்ட &nbsp; ஆற்றல் &nbsp; பெற்றவர்களாக &nbsp; உருவாக்குதல்
+  <li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;font-size:22px;">மொழித் &nbsp; திறன்களிலும் &nbsp; இலக்கியத் &nbsp; திறன்களிலும் &nbsp; மேம்பட்ட &nbsp; ஆற்றல் &nbsp; பெற்றவர்களாக &nbsp; உருவாக்குதல்
 </li>
-    <li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">தமிழ்மொழியின் &nbsp; பண்பாட்டு &nbsp; மூலங்கள், &nbsp; மரபுவழிப் &nbsp; பண்புகள் &nbsp; முதலானவற்றில் &nbsp; ஆழமான &nbsp; புரிந்துணர்வு &nbsp; கொண்டவர்களாக &nbsp; வளர்த்தல்
+    <li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;font-size:22px;">தமிழ்மொழியின் &nbsp; பண்பாட்டு &nbsp; மூலங்கள், &nbsp; மரபுவழிப் &nbsp; பண்புகள் &nbsp; முதலானவற்றில் &nbsp; ஆழமான &nbsp; புரிந்துணர்வு &nbsp; கொண்டவர்களாக &nbsp; வளர்த்தல்
 </li>
-      <li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">நுண்ணாய்வுச் &nbsp; சிந்தனையும் &nbsp; படைப்பாக்கச் &nbsp; சிந்தனையும் &nbsp; கொண்டவர்களாக &nbsp; உருவாக்குதல்
+      <li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;font-size:22px;">நுண்ணாய்வுச் &nbsp; சிந்தனையும் &nbsp; படைப்பாக்கச் &nbsp; சிந்தனையும் &nbsp; கொண்டவர்களாக &nbsp; உருவாக்குதல்
 </li>
   </ul></div>
    <div class="column">
@@ -146,10 +142,10 @@ width:100%;
 <br/>
 <br/>
 <ul>
-<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">புகுமுகநிலைப் &nbsp; பாடத்திட்டம் &nbsp; பரந்துபட்ட &nbsp; மூன்று &nbsp; கருப்பொருள்களைக் &nbsp; வழிகாட்டியாகக் &nbsp; கொண்டுள்ளது. </li>
-<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">மொழிப்பாடங்களிலுள்ள &nbsp; பனுவல்களையும் &nbsp; இலக்கிய &nbsp; பாடங்களிலுள்ள &nbsp; செய்திகளையும் &nbsp; அந்தக் &nbsp; கருப்பொருள்களோடு &nbsp; மாணவர்கள் &nbsp; தொடர்புபடுத்திப் &nbsp; பார்ப்பார்கள். 
+<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;font-size:22px;">புகுமுகநிலைப் &nbsp; பாடத்திட்டம் &nbsp; பரந்துபட்ட &nbsp; மூன்று &nbsp; கருப்பொருள்களைக் &nbsp; வழிகாட்டியாகக் &nbsp; கொண்டுள்ளது. </li>
+<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;font-size:22px;">மொழிப்பாடங்களிலுள்ள &nbsp; பனுவல்களையும் &nbsp; இலக்கிய &nbsp; பாடங்களிலுள்ள &nbsp; செய்திகளையும் &nbsp; அந்தக் &nbsp; கருப்பொருள்களோடு &nbsp; மாணவர்கள் &nbsp; தொடர்புபடுத்திப் &nbsp; பார்ப்பார்கள். 
 </li>
-<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">இந்தப் &nbsp; பாடத்திட்டத்தில் &nbsp; 21-ஆம் &nbsp; நூற்றாண்டுத்திறன் &nbsp; சட்டகத்தில் &nbsp; இடம்பெற்றுள்ள  &nbsp; திறன்வளர்ச்சியையும் &nbsp; விழுமியங்களையும் &nbsp; பெற்று &nbsp; அவற்றை &nbsp; முறையே &nbsp; பயன்படுத்தும் &nbsp; ஆற்றலை &nbsp; மாணவர்கள் &nbsp; வளர்த்துக்கொள்வர்.
+<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;font-size:22px;">இந்தப் &nbsp; பாடத்திட்டத்தில் &nbsp; 21-ஆம் &nbsp; நூற்றாண்டுத்திறன் &nbsp; சட்டகத்தில் &nbsp; இடம்பெற்றுள்ள  &nbsp; திறன்வளர்ச்சியையும் &nbsp; விழுமியங்களையும் &nbsp; பெற்று &nbsp; அவற்றை &nbsp; முறையே &nbsp; பயன்படுத்தும் &nbsp; ஆற்றலை &nbsp; மாணவர்கள் &nbsp; வளர்த்துக்கொள்வர்.
 </li>
 </ul>
 <img src="/images/21st-cc-diagram.png" style="width:70%" />
@@ -233,8 +229,8 @@ width:100%;
 <li style="font-family:Anjal New InaiMathi Sch Book;">இந்தப் பயிலரங்கின்போது மாணவர்களுக்கு உதவக்கூடிய வகையில் ஆட்டனத்தி ஆதிமந்தி காவியத்தின் உரை வெளியிடப்பட்டது.  </li><br/>
 <img src="/images/TL-PreUni-1.png"><br/>
 <img src="/images/TL-PreUni-2.png"><br/>
-<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;">தொடக்கக் கல்லூரி ஆசிரியர்களுக்கான தகவல் தொழில்நுட்பப் பயிலரங்கு -13 ஏப்ரல் 2022</h4>
-<p style="font-family:Anjal New InaiMathi Sch Book;">
+<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;font-size:30px;">தொடக்கக் கல்லூரி ஆசிரியர்களுக்கான தகவல் தொழில்நுட்பப் பயிலரங்கு -13 ஏப்ரல் 2022</h4>
+<p style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">
 தமிழ்மொழி கற்றல் கற்பித்தலுக்கு உதவக்கூடிய வகையில் மாணவர் கற்றல் தளத்தில் உள்ள புதிய கூறுகளைப் பயன்படுத்த ஆசிரியர்கள் அறிந்துகொண்டனர்.</p>
 <div class="row">
   <div class="column">
@@ -245,7 +241,7 @@ width:100%;
   </div>
 </div>
  <h4 id="C6"><img src="/images/TL JC_Header05.png" /></h4>
- <p style="font-family:Anjal New InaiMathi Sch Book;">தமிழ்மொழி &nbsp; விருப்பப்பாடத்திட்டம் &nbsp; 2020-ஆம் &nbsp; ஆண்டு &nbsp; அறிமுகம் &nbsp; கண்டது. &nbsp; தகுதிவாய்ந்த &nbsp; மாணவர்களைத் &nbsp; தமிழ்மொழியில் &nbsp; ஆற்றல்மிக்கவர்களாகவும், &nbsp; தமிழ் &nbsp; இலக்கியத்திலும் &nbsp; பண்பாட்டிலும் &nbsp; அவர்களுக்கிருக்கும் &nbsp; புரிந்துணர்வைப் &nbsp; பேணி &nbsp; வளர்க்கவும் &nbsp; இத்திட்டம் &nbsp; வகைசெய்யும். &nbsp; அதோடு &nbsp; மாணவர்களை &nbsp; இருமொழியாற்றல் &nbsp; மிக்கவர்களாக &nbsp; உருவாக்குவதே &nbsp; இந்தத் &nbsp; திட்டத்தின் &nbsp; நோக்கம்.
+ <p style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">தமிழ்மொழி &nbsp; விருப்பப்பாடத்திட்டம் &nbsp; 2020-ஆம் &nbsp; ஆண்டு &nbsp; அறிமுகம் &nbsp; கண்டது. &nbsp; தகுதிவாய்ந்த &nbsp; மாணவர்களைத் &nbsp; தமிழ்மொழியில் &nbsp; ஆற்றல்மிக்கவர்களாகவும், &nbsp; தமிழ் &nbsp; இலக்கியத்திலும் &nbsp; பண்பாட்டிலும் &nbsp; அவர்களுக்கிருக்கும் &nbsp; புரிந்துணர்வைப் &nbsp; பேணி &nbsp; வளர்க்கவும் &nbsp; இத்திட்டம் &nbsp; வகைசெய்யும். &nbsp; அதோடு &nbsp; மாணவர்களை &nbsp; இருமொழியாற்றல் &nbsp; மிக்கவர்களாக &nbsp; உருவாக்குவதே &nbsp; இந்தத் &nbsp; திட்டத்தின் &nbsp; நோக்கம்.
 <br /><br />
 தமிழ்மொழி விருப்பப்பாடத்திட்டத்தை வழங்கும் தொடக்கக்கல்லூரிகள் <br />
 <ul>
@@ -259,8 +255,8 @@ width:100%;
   <a href="/files/tlep-jc_infosheet_students.pdf" target="_blank">TLEP JC Infosheet</a> &nbsp; 
   <a href="/files/tlep-sec-infosheet-students-2019.pdf" target="_blank">TLEP Sec Infosheet</a>
  <br /><br />
-<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;">தமிழ்மொழி விருப்பப்பாடத் திட்டம் வழங்கும் பள்ளிகளில் சிறப்பு அறைகள்</h4>
-<p style="font-family:Anjal New InaiMathi Sch Book;">தமிழ்மொழி விருப்பாடத்தைப் பயிலும் மாணவர்களுக்கு, ஆர்வமுட்டும் வகையில் பலதரப்பட்ட நடவடிக்கைகளை நடத்த மாணவர்களுக்காக ஒரு சிறப்பு அறை இருப்பது அவசியம். இதற்காகக் கல்வி அமைச்சு சிறப்பு நிதி வழங்கியுள்ளது. ஆசிரியர்கள் தங்கள் மாணவர்களுக்குத் தேவையான பல்வேறு வசதிகளைக் கொண்டமைந்த அறையை  உருவாக்கினர். தேசியக் கல்லூரி விருப்பப்பாடத்திட்டத்தைப் பயிலும் மாணவர்களுக்காக உருவாக்கிய சிறப்பு அறையின் திறப்பு விழா. </p>
+<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;font-size:30px;">தமிழ்மொழி விருப்பப்பாடத் திட்டம் வழங்கும் பள்ளிகளில் சிறப்பு அறைகள்</h4>
+<p style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">தமிழ்மொழி விருப்பாடத்தைப் பயிலும் மாணவர்களுக்கு, ஆர்வமுட்டும் வகையில் பலதரப்பட்ட நடவடிக்கைகளை நடத்த மாணவர்களுக்காக ஒரு சிறப்பு அறை இருப்பது அவசியம். இதற்காகக் கல்வி அமைச்சு சிறப்பு நிதி வழங்கியுள்ளது. ஆசிரியர்கள் தங்கள் மாணவர்களுக்குத் தேவையான பல்வேறு வசதிகளைக் கொண்டமைந்த அறையை  உருவாக்கினர். தேசியக் கல்லூரி விருப்பப்பாடத்திட்டத்தைப் பயிலும் மாணவர்களுக்காக உருவாக்கிய சிறப்பு அறையின் திறப்பு விழா. </p>
  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/QXvV21a-TqE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> 
 
   <br />
