Update file: பல்கலைக்கழகப் புகுமுக நிலை.md

--- a/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
+++ b/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
@@ -176,32 +176,29 @@ width:100%;
 	
 <h4 id="C1"><span style="font-size:30px; font-family:Anjal New InaiMathi Sch Book; color:purple;">பணிச்சட்டமும் பாடத்திட்டங்களும்
  </span></h4>
-	
 <h4 style="font-family:Anjal New InaiMathi Sch Book;">பாடத்திட்டப் பணிச்சட்டம்</h4>
-
-  <img src="/images/tl-preu04.jpeg" /><br />
     <img src="/images/TL-PreU_Image03.jpg" /><br />
     <a href="/files/H1-Syllabus-Tamil.pdf" target="_blank" style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">2020 H1 Tamil Language &amp; Tamil Language ‘B’ Syllabus</a><br />
     <a href="/files/H2-&amp;-H3-TLL-Syllabus-2021.pdf" target="_blank" style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">H2&amp; H3 Tamil Language &amp; Literature Syllabus
 </a><br/>
 <img src="/images/MTLS2022_TL_JC_Curriculum_V1_JC_1.jpg"><br>
 <img src="/images/MTLS2022_TL_JC_Curriculum_V1_JC_2.jpg"><br>
-<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;">விளையாட்டுவழி பாட உருவாக்கம் </h4>
-<p style="font-family:Anjal New InaiMathi Sch Book;">மாணவர்கள் விளையாட்டு வழி பாடங்களைக் கற்க  விளையாட்டுவழி பாட உருவாக்கம் (Gamification) என்னும் புதிய கூறு இணைக்கப்பட்டுள்ளது. மாணவர்கள் அதிக ஈடுபாட்டுடன் தமிழ்மொழியைக் கற்க இந்தப் புதிய கூறு துணைபுரிகிறது.</p>
+<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;font-size:30px;">விளையாட்டுவழி பாட உருவாக்கம் </h4>
+<p style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">மாணவர்கள் விளையாட்டு வழி பாடங்களைக் கற்க  விளையாட்டுவழி பாட உருவாக்கம் (Gamification) என்னும் புதிய கூறு இணைக்கப்பட்டுள்ளது. மாணவர்கள் அதிக ஈடுபாட்டுடன் தமிழ்மொழியைக் கற்க இந்தப் புதிய கூறு துணைபுரிகிறது.</p>
 <img src="/images/pic-37.jpg"><br/>
  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/QXvV21a-TqE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> 
  <br>
  <img src="/images/MTLS2022_TL_JC_Curriculum_V1_JC_3.jpg"><br>
-	<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;">தமிழ்மொழி மாதம் 2022  
+	<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;font-size:30px;">தமிழ்மொழி மாதம் 2022  
 தொடக்கக் கல்லூரி மாணவர்களின் பங்களிப்பு </h4>
-	 <ul>
+	 <ul style="font-size:22px;">
   	<li>யீசூன் இன்னோவா தொடக்கக் கல்லூரி.</li>
   		<li>33-ஆம் கல்லூரி, புகுமுக வகுப்புகளுக்கான தமிழ்மொழி, இலக்கியக் கருத்தரங்கு.</li>
   			<li >7 மே 2022-இல் சிறப்பாக நடைபெற்றது.</li>
   				<li>மாணவர்கள் தங்கள் மொழித்திறன்களை வெளிப்படுத்தி நல்ல பல நிகழ்ச்சிகளைப் படைத்தனர்.</li>
   </ul>
  <img src="/images/MTLS2022_TL_JC_Curriculum_V1_JC_4.jpg"><br>
-	 <ul>
+	 <ul style="font-size:22px;">
   	<li>அண்டர்சன் சிராங்கூன் தொடக்கக் கல்லூரி.</li>
   		<li>அக்னி 2022- தமிழ்மொழி- நேற்று, இன்று, நாளை. 23- ஏப்ரல் 2022.</li>
   			<li >மாணவர்கள் தங்கள் திறமைகளை வெளிகாட்டவும், இளையர்களிடம் தமிழ்மொழியின்பால் ஆர்வத்தைத் தூண்டவும் பல சிறப்பு நிகழ்ச்சிகள் இடம்பெற்றன.</li>
@@ -209,24 +206,23 @@ width:100%;
  <img src="/images/MTLS2022_TL_JC_Curriculum_V1_JC_5.jpg"><br>
 <h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;">கல்வி அமைச்சு நடத்தும்  
 நானும் ஒரு படைப்பாளி – வளரும் கவிஞர்கள்</h4>
-	<p style="font-family:Anjal New InaiMathi Sch Book;">
-
+	<p style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">
 கல்வி அமைச்சு ஏற்பாடு செய்து நடத்தும் நானும் ஒரு படைப்பாளி நிகழ்ச்சியில் ஒவ்வொரு வருடமும் தொடக்கக்கல்லூரி மாணவர்கள் ஆர்வத்துடன் பங்கெடுத்து வருகிறார்கள்.
-
+<br ><br>
 அனுபவம் வாய்ந்த கவிஞர்கள் மாணவர்களுக்குக் கவிதையை ரசிப்பதற்கும் இயற்றுவதற்கும் தேவையான அடிப்படைத் திறன்களைக் கற்பித்தனர்.
-
+		<br>
 </p>
  <img src="/images/MTLS2022_TL_JC_Curriculum_V1_JC_6.jpg"><br>
  <img src="/images/MTLS2022_TL_JC_Curriculum_V1_JC_7.jpg"><br>
-<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;">தொடக்கக் கல்லூரி ஆசிரியர்களின் பணிமேம்பாட்டிற்காக ஏற்பாடு செய்யப்பட்ட பயிலரங்குகள்</h4>
+<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;font-size:30px;">தொடக்கக் கல்லூரி ஆசிரியர்களின் பணிமேம்பாட்டிற்காக ஏற்பாடு செய்யப்பட்ட பயிலரங்குகள்</h4>
 <ul>
-    <li style="font-family:Anjal New InaiMathi Sch Book;">இலக்கியம் </li>
-    <li style="font-family:Anjal New InaiMathi Sch Book;">தகவல் தொடர்புத் தொழில்நுட்பம் </li>
+    <li style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">இலக்கியம் </li>
+    <li style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">தகவல் தொடர்புத் தொழில்நுட்பம் </li>
 </ul>
-<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;">ஆட்டனத்தி ஆதிமந்தி பயிலரங்கு – 20 ஏப்ரல் 2022</h4>
-<li style="font-family:Anjal New InaiMathi Sch Book;">ஆசிரியர்கள் ஆட்டனத்தி ஆதிமந்தி காவியத்தின் பயிற்றுமுறைகளை அறிந்துகொண்டனர்.</li>
-<li style="font-family:Anjal New InaiMathi Sch Book;">தமிழ்ப் பேராசிரியர் முனைவர் ப.சத்யா இந்தப் பயிலரங்கில் முக்கிய பல இலக்கியக் கூறுகளையும் தகவல்களையும் எடுத்துரைத்தார்.</li>
-<li style="font-family:Anjal New InaiMathi Sch Book;">இந்தப் பயிலரங்கின்போது மாணவர்களுக்கு உதவக்கூடிய வகையில் ஆட்டனத்தி ஆதிமந்தி காவியத்தின் உரை வெளியிடப்பட்டது.  </li><br/>
+<h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;font-size:30px;">ஆட்டனத்தி ஆதிமந்தி பயிலரங்கு – 20 ஏப்ரல் 2022</h4>
+<li style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">ஆசிரியர்கள் ஆட்டனத்தி ஆதிமந்தி காவியத்தின் பயிற்றுமுறைகளை அறிந்துகொண்டனர்.</li>
+<li style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">தமிழ்ப் பேராசிரியர் முனைவர் ப.சத்யா இந்தப் பயிலரங்கில் முக்கிய பல இலக்கியக் கூறுகளையும் தகவல்களையும் எடுத்துரைத்தார்.</li>
+<li style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">இந்தப் பயிலரங்கின்போது மாணவர்களுக்கு உதவக்கூடிய வகையில் ஆட்டனத்தி ஆதிமந்தி காவியத்தின் உரை வெளியிடப்பட்டது.  </li><br/>
 <img src="/images/TL-PreUni-1.png"><br/>
 <img src="/images/TL-PreUni-2.png"><br/>
 <h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;font-size:30px;">தொடக்கக் கல்லூரி ஆசிரியர்களுக்கான தகவல் தொழில்நுட்பப் பயிலரங்கு -13 ஏப்ரல் 2022</h4>
