Update file: கல்வி அமைச்சின் பாலர் பள்ளிகள்.md

--- a/pages/கல்வி அமைச்சின் பாலர் பள்ளிகள்.md
+++ b/pages/கல்வி அமைச்சின் பாலர் பள்ளிகள்.md
@@ -106,7 +106,7 @@ margin-left:25px;
     <td style="text-align: left; padding-left:8px; padding-right: 12px;border:0;">
     <ul>
     <li style="font-size:20px;font-family:Anjal New InaiMathi Sch Book; text-align:left;">இருமொழிக் கல்வியை இளம் பருவத்திலேயே பேணி வளர்த்தல்</li>
-    <li style="font-size:20px;font-family:Anjal New InaiMathi Sch Book; text-align:left;"> ஆங்கிலத்தையும் தமது தாய்மொழியையும் மகிழ்ச்சியுடன் கற்பதற்கும் தன்னம்பிக்கையுடன் கருத்துப்பரிமாற்றத்தில் ஈடுபடுவதற்கும் வாய்ப்பளித்தல்</li>
+    <li style="font-size:20px;font-family:Anjal New InaiMathi Sch Book; text-align:left;"> பிள்ளைகள் ஆங்கிலத்தையும் தமது தாய்மொழியையும் மகிழ்ச்சியுடன் கற்பதற்கும் தன்னம்பிக்கையுடன் கருத்துப்பரிமாற்றத்தில் ஈடுபடுவதற்கும் வாய்ப்பளித்தல்</li>
    <li style="font-size:20px;font-family:Anjal New InaiMathi Sch Book; text-align:left;"> பிள்ளைகள் தம் மரபையும் பழக்க வழக்கங்களையும் அறிந்துகொள்ள வாய்ப்பளித்தல்</li>
     <li style="font-size:20px;font-family:Anjal New InaiMathi Sch Book; text-align:left;"> பிள்ளைகள் கேட்டல், பேசுதல் திறன்களில் தகுந்த தேர்ச்சியையும் படித்தல், எழுதுதல்  திறன்களில் ஆயத்த நிலையையும்         பெறுவதற்கு வழிவகுத்தல்</li>
     <li style="font-size:20px;font-family:Anjal New InaiMathi Sch Book; text-align:left;"> பிள்ளைகளின் எதிர்கால மொழி கற்றலுக்கு வலுவான அடித்தளத்தை அமைத்துத் தர உதவுதல்</li>
