--- a/pages/高中.md
+++ b/pages/高中.md
@@ -5,7 +5,7 @@ description: ""
 ---
 <html>
 <style>
-		.btntop {
+        .btntop {
     position: fixed;
     float: right;
     bottom: 20px;
@@ -22,7 +22,7 @@ description: ""
    * {
   box-sizing: border-box;
 }
-	}
+    }
 .columnvideo {
   float: left;
   width: 50%;
@@ -56,6 +56,11 @@ description: ""
 .img-container1 {
   float: left;
   width: 50%;
+  padding: 5px;
+}
+img-container2 {  
+  float: left;
+  width: 33.33%;
   padding: 5px;
 }
 @media only screen and (max-width: 600px) {
@@ -102,7 +107,29 @@ padding: 26px;
     text-align: center;
     display: block;
     margin-left: 26px;
-  width: 83%;
+    width: 83%;
+  }
+  .btn01 {
+    font-size: 18px;
+    font-family: KaiTi;
+    background-color:#d14165;
+    padding: 13px 13px;
+    border-radius: 6px;
+    text-align: center;
+    display: block;
+    margin-left: 26px;
+    width:35%;
+  }
+  .btn02 {
+    font-size: 18px;
+    font-family: KaiTi;
+    background-color:#d14165;
+    padding: 13px 13px;
+    border-radius: 6px;
+    text-align: center;
+    display: block;
+    margin-left: 26px;
+    width:35%;
   }
    .row {
     display: flex;
@@ -149,9 +176,9 @@ width:80%;
 <h4 id="C2" style="font-size:35px;font-family:KaiTi;color:#d14165;">H1华文与华文B
 </h4>
  <img src="/images/MTLS2022_CL_Curriculum_V1_JC_H1-Chi.jpg" />
-  <p><a href="/files/2020_h1cl-and-clb-syllabus_pre-university.pdf" target="_blank"> <span style="font-size:21px;font-family:KaiTi;">H1华文与华文 B 课程标准 </span>
+<a href="/files/2020_h1cl-and-clb-syllabus_pre-university.pdf" target="_blank" class="btn01" style="color:#fff;font-family:KaiTi;"> <span style="font-size:21px;font-family:KaiTi;">H1华文与华文 B 课程标准 </span>
 </a><br />
-  <a href="/files/2020_h1mtl-and-mtlb-syllabus_pre-university.pdf" target="_blank"> <span style="font-size:20px;font-family:Calibri">H1MTL &amp; MTL‘B’ Syllabus Document
+  <a href="/files/2020_h1mtl-and-mtlb-syllabus_pre-university.pdf" target="_blank" class="btn01" style="color:#fff;"> <span style="font-size:20px;font-family:Lato,sans-serif">H1MTL &amp; MTL‘B’ Syllabus Document
  </span></a>
   </p>
   <h4 id="C3" style="font-size:35px;font-family:KaiTi;color:#d14165">H2华文与文学
@@ -161,10 +188,10 @@ width:80%;
 </h4>
   <div class="clearfix">
   <div class="img-container1">
- <a href="#C9" class="btn1" style="color:#fff;font-family:KaiTi;">H2/H3华文与文学课程标准:</a>
+ <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3cll-syllabus.pdf?la=en&hash=3D0B0283BCFB6BCEE253077B44A97CE1FA28F619" class="btn1" style="color:#fff;font-family:KaiTi;">H2/H3华文与文学课程标准:</a>
   </div>
    <div class="img-container1">
- <a href="#C10" class="btn2" style="color:#fff;font-family:KaiTi;">H2/H3 Mother Tongue Language and Literature Syllabus Document:</a>
+ <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3mtll-syllabus.pdf?la=en&hash=5E5872607A094E2A64EB0D96A419FBA86CCAB8AE" class="btn2" style="color:#fff;font-family:Lato,sans-serif;">H2/H3 Mother Tongue Language and Literature Syllabus Document:</a>
   </div>
   </div>
 <h4  style="font-size:35px;font-family:KaiTi;color:#d14165">大学相关科系链接：
@@ -188,22 +215,6 @@ width:80%;
   </div>
 </div>
   <br />
-  <h4 id="C9" style="font-size:35px;font-family:KaiTi;color:#d14165">H2华文与文学相关链接</h4>
-  <p style="font-family:KaiTi;font-size:25px">H2/H3华文与文学课程标准:</p>
-    <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3cll-syllabus.pdf?la=en&hash=3D0B0283BCFB6BCEE253077B44A97CE1FA28F619" target="_blank">https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3cll-syllabus.pdf?la=en&hash=3D0B0283BCFB6BCEE253077B44A97CE1FA28F619</a>
-  <p style="font-family:KaiTi;font-size:25px">H2/H3 Mother Tongue Language and Literature Syllabus Document: </p>
-<a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3mtll-syllabus.pdf?la=en&hash=5E5872607A094E2A64EB0D96A419FBA86CCAB8AE" target="_blank">https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3mtll-syllabus.pdf?la=en&hash=5E5872607A094E2A64EB0D96A419FBA86CCAB8AE</a>
-  <h4  id="C10" style="font-size:35px;font-family:KaiTi;color:#d14165">H2华文与文学相关链接</h4>
-  <p style="font-family:KaiTi;font-size: 25px;">大学相关科系链接： <br/>新加坡国立大学中文系</p>
-  <a href="https://fass.nus.edu.sg/chs/specialisations/" target="_blank">https://fass.nus.edu.sg/chs/specialisations/</a>
-   <p style="font-family:KaiTi;font-size: 25px;">南洋理工大学中文系</p>
-  <a href="https://www.ntu.edu.sg/soh/admissions/undergraduate/chinese" target="_blank">https://www.ntu.edu.sg/soh/admissions/undergraduate/chinese</a>
-   <p style="font-family:KaiTi;font-size: 25px;">北京大学中文系</p>
-  <a href="https://chinese.pku.edu.cn/ " target="_blank">https://chinese.pku.edu.cn/ </a>
-   <p style="font-family:KaiTi;font-size: 25px;">复旦大学中文系</p>
-  <a href="http://chinese.fudan.edu.cn/" target="_blank">http://chinese.fudan.edu.cn/</a>
-   <p style="font-family:KaiTi;font-size: 25px;">国立台湾大学中文系</p>
-  <a href="http://www.cl.ntu.edu.tw/home.jsp " target="_blank">http://www.cl.ntu.edu.tw/home.jsp </a>
  <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译</h4>
  <img src="/images/MTLS2022_CL_Curriculum_V1_JC_H2-Translation.jpg">
   <a href="/files/2021-h2tr-syllabus.pdf" target="_blank">
@@ -215,57 +226,58 @@ width:80%;
  <a href="https://www.mci.gov.sg/careers-grants/scholarship/scholarship/scholarships-offered" target="_blank" class="btn8" style="color:#fff;font-family:KaiTi;">MCI奖学金</a>
   </div>
   </div>
-<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译相关链接</h4>
-<p style="font-size:25px;font-family:KaiTi;">H2翻译课程标准：[PDF] </p>
-  <a href="https://www.moe.gov.sg/-/media/files/syllabus/2021-preu-h2-translation-chinese.pdf?la=en&hash=2516D3ED39A60CDD3CEFC44CE38D845166A446C9  " target="_blank">https://www.moe.gov.sg/-/media/files/syllabus/2021-preu-h2-translation-chinese.pdf?la=en&hash=2516D3ED39A60CDD3CEFC44CE38D845166A446C9  </a>
-<p style="font-size:25px;font-family:KaiTi;">MCI奖学金链接：</p><a href="https://www.mci.gov.sg/careers-grants/scholarship/scholarship/scholarships-offered  " target="_blank">https://www.mci.gov.sg/careers-grants/scholarship/scholarship/scholarships-offered  </a>
+ <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译相关链接</h4>
+
+ <a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">H2中国通识课程标准 [PDF]</a>
+ <br>
+   <a href="https://www.mci.gov.sg/careers-grants/scholarship/scholarship/scholarships-offered" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">MCI奖学金链接</a>
+<br>
 <p style="font-size:25px;font-family:KaiTi;">大学相关科系链接：</p>
-<p style="font-size:25px;font-family:KaiTi;">NTU M.A. Translation and Interpretation</p>
-  <a href="https://www.ntu.edu.sg/soh/admissions/mti" target="_blank">https://www.ntu.edu.sg/soh/admissions/mti</a>
-<p style="font-size:25px;font-family:KaiTi;">SUSS BA Translation and Interpretation</p>
-  <a href="https://www.suss.edu.sg/programmes/detail/ba-translation-and-interpretation-bati " target="_blank">https://www.suss.edu.sg/programmes/detail/ba-translation-and-interpretation-bati </a>
-<p style="font-size:25px;font-family:KaiTi;">NUS FASS Department of  Chinese Studies - Minor in Translation</p>
-  <a href="https://fass.nus.edu.sg/chs/minor/" target="_blank">https://fass.nus.edu.sg/chs/minor/</a>
-<p style="font-size:25px;font-family:KaiTi;">NTU M.A. Translation and Interpretation</p>
-  <a href="https://www.ntu.edu.sg/soh/admissions/mti" target="_blank">https://www.ntu.edu.sg/soh/admissions/mti</a>
+ <div class="clearfix">
+  <div class="img-container2">
+ <a href="https://www.ntu.edu.sg/soh/admissions/mti" class="btn01" target="_blank" style="color:#fff;font-family:Lato,sans-serif;">NTU M.A. Translation and Interpretation</a>
+<br>
+ <a href="https://fass.nus.edu.sg/chs/minor/" class="btn01" target="_blank" style="color:#fff;font-family:Lato,sans-serif;">SUSS BA Translation and Interpretation</a>
+<br>
+ <a href="https://www.ntu.edu.sg/soh/admissions/mti " class="btn01" target="_blank" style="color:#fff;font-family:Lato,sans-serif;">NTU M.A. Translation and Interpretation</a>
+ <br>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识</h4>
 <img src="/images/MTLS2022_CL_Curriculum_V2_JC_6.jpg"><br/>
-<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识相关链接</h4>
-<p style="font-size:25px;font-family:KaiTi;">H2中国通识课程标准：[PDF]</p>
-  <a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" target="_blank">https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7</a>
 <p style="font-size:25px;font-family:KaiTi;">大学相关科系链接：</p>
-<p style="font-size:25px;font-family:KaiTi;">北京大学国际关系学院</p>
-  <a href="https://www.sis.pku.edu.cn/index.htm" target="_blank">https://www.sis.pku.edu.cn/index.htm</a>
-  <p style="font-size:25px;font-family:KaiTi;">NUS FASS Global Studies Programme</p>
-  <a href="https://fass.nus.edu.sg/globalstudies/ " target="_blank">https://fass.nus.edu.sg/globalstudies/ </a>
-  <p style="font-size:25px;font-family:KaiTi;">NTU Masters of Social Sciences in China and Global Governance</p>
-  <a href="https://www.ntu.edu.sg/hass/admissions/graduate-programmes/programmes-listing/detail/master-of-social-sciences-(china-and-global-governance) " target="_blank">https://www.ntu.edu.sg/hass/admissions/graduate-programmes/programmes-listing/detail/master-of-social-sciences-(china-and-global-governance) </a>
+  <div class="clearfix">
+  <div class="img-container2">
+<a href="https://www.ntu.edu.sg/soh/admissions/mti" target="_blank" class="btn01" style="color:#fff;font-family:KaiTi;">北京大学国际关系学院</a>
+<br>
+ <a href="https://fass.nus.edu.sg/globalstudies/" target="_blank" class="btn01" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NUS FASS Global Studies Programme</a>
+<br/>
+  <a href="https://www.ntu.edu.sg/hass/admissions/graduate-programmes/programmes-listing/detail/master-of-social-sciences-(china-and-global-governance)" target="_blank" class="btn01" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NTU Masters of Social Sciences in China and Global Governance</a>
+  <br>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">高中华文课程数码资源</h4>
-<p style="font-size:25px;font-family:KaiTi;">新加坡学生学习平台(Singapore Student Learning Space)为学生提供了丰富的学习资源。学生可以登录SLS，搜索各高中华文科目的学习资源。这些资源能让学生进行延伸学习或巩固所学，同时也能培养他们自主学习的能力。</p>
+<p style="font-size:25px;font-family:KaiTi;">新加坡学生学习平台 <span style="font-family: Lato,sans-serif;">(Singapore Student Learning Space) </span>span>为学生提供了丰富的学习资源。学生可以登录SLS，搜索各高中华文科目的学习资源。这些资源能让学生进行延伸学习或巩固所学，同时也能培养他们自主学习的能力。</p>
    <br />
 <div class="rowvideo">
  <div class="columnvideo">
- <iframe width="350" height="315" src="https://www.youtube.com/embed/YngQbtjEUps" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:18px;font-family:KaiTi"> H1华文数码资源示例行 
+ <iframe width="645" height="361" src="https://www.youtube.com/embed/YngQbtjEUps" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+ <span style="color:#d14165;font-size:20px;font-family:KaiTi"> H1华文数码资源示例行 
 课堂活动</span>
    <br />
 </div>
  <div class="columnvideo">
- <iframe width="350" height="315" src="https://www.youtube.com/embed/wLFDKHW4ogc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 华文B数码资源示例
+ <iframe width="645" height="361" src="https://www.youtube.com/embed/wLFDKHW4ogc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+ <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 华文B数码资源示例
 学生学习成果</span>
    <br />
 </div></div>
 <div class="rowvideo">
  <div class="columnvideo">
- <iframe width="350" height="315" src="https://www.youtube.com/embed/bMkJ4oFUkf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 语文课件：REAP策略
+ <iframe width="645" height="361" src="https://www.youtube.com/embed/bMkJ4oFUkf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+ <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 语文课件：REAP策略
 课堂活动</span>
    <br />
 </div>
  <div class="columnvideo">
- <iframe width="350" height="315" src="https://www.youtube.com/embed/MYZ0v-4T4_Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 文学课件：修辞手法学生学习成果</span>
+ <iframe width="645" height="361" src="https://www.youtube.com/embed/MYZ0v-4T4_Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+ <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 文学课件：修辞手法学生学习成果</span>
    <br />
 </div>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识数码资源示例: [SLS 课件截图]</h4>
@@ -324,9 +336,9 @@ width:80%;
   </div>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">双文化课程</h4>
 <img src="/images/MTLS2022_CL_Curriculum_V2_JC_8.jpg"><br/>
-	<img src="/images/BSP-Gif.gif"><br/><center>
+    <img src="/images/BSP-Gif.gif"><br/><center>
 <span style="color:#d14165;font-size:18px;font-family:KaiTi; margin-top:-12px;">双文化课程海外浸濡</span></center> <br/>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">双文化课程相关链接</h4>
-<a href="https://www.moe.gov.sg/financial-matters/awards-scholarships/programme-scholarships" target="_blank" style="font-family:KaiTi">双文化课程奖学金</a><br><br>
-	<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
-	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
+<a href="https://www.moe.gov.sg/financial-matters/awards-scholarships/programme-scholarships" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">双文化课程奖学金</a><br><br>
+    <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+    <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
