--- a/pages/高中.md
+++ b/pages/高中.md
@@ -281,41 +281,12 @@ width:80%;
    <br />
 </div>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识数码资源示例: [SLS 课件截图]</h4>
-   <div class="row">
-            <div class="column" style="float: left;width: 50%; padding: 5px;padding-left:20px;">
-            <img src="/images/cl-preu_picture6.png" style="width:100%" />
-            </div>
-            <div class="column" style="float: left;width: 50%; padding: 5px;padding-right:20px;">
-            <img src="/images/cl-preu_picture7.png" style="width:100%" />
-            </div>
-          </div>
-        <br />     
-          <div class="row">
-            <div class="column" style="float: left;width: 50%; padding: 5px;padding-left:20px;padding-bottom:20px;">
-            <img src="/images/cl-preu_picture8.png" style="width:100%" />
-            </div>
-            <div class="column" style="float: left;width: 50%; padding: 5px;padding-right:20px;padding-bottom:20px;">
-            <img src="/images/cl-preu_picture9.png" style="width:100%" />
-            </div>
-          </div>
-     </div>
+  <img src="/images/CL-JC-Gif-1.gif">
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译数码资源示例：[SLS 课件截图]</h4>
 <div class="row">
  <div class="column" style="float: left;width: 50%; padding: 5px;padding-left:20px;">
-  <img src="/images/cl-preu_picture1.png" style="width:100%">
-  </div>
-  <div class="column" style="float: left;width: 50%; padding: 5px;padding-left:20px;">
-  <img src="/images/cl-preu_picture2.png" alt="Forest" style="width:100%">
-  </div>
-</div>
-<div class="row">
-  <div class="column" style="float: left;width: 50%; padding: 5px;padding-left:20px;">
-  <img src="/images/cl-preu_picture3.png" style="width:100%">
-  </div>
-<div class="column" style="float: left;width: 50%; padding: 5px;padding-left:20px;">
-  <img src="/images/cl-preu_picture4.png" style="width:100%">
-  </div>
-</div>
+  <img src="/images/CL-JC-Gif-2.gif" style="width:100%">
+  <br>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">高中华文语文特选课程</h4>
 <img src="/images/MTLS2022_CL_Curriculum_V2_JC_7.jpg">
 <br/>
