--- a/pages/小学.md
+++ b/pages/小学.md
@@ -225,7 +225,7 @@ width:100%;
 <img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_3.jpg"><br/>
 <h4 style="text-align:center;font-family:KaiTi;font-size:35px;">听说剧场</h4>
 <li style="text-align: left;font-family:KaiTi;font-size:25px;">动画放映室／录像放映室</li>
-<p style="font-family:KaiTi;font-size:25px">通过有趣的动画或录像，提高学生的口语表达能力</p>
+<p style="font-family:KaiTi;font-size:25px">通过有趣的动画或录像，提高学生的口语表达能力。</p>
 <center>
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/PB0IwcNKCBA" title="动画放映室 2B19" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  
   <br />
