--- a/pages/纪宏老师.md
+++ b/pages/纪宏老师.md
@@ -46,5 +46,6 @@ max-width:100%;
     </p>
     <p style="text-align:justify;font-family:Lato,sans-serif;">Her passion as a pre-school Chinese Language teacher is evident through her belief that one should be a “well-prepared Mother Tongue Language teacher”. She hopes to garner more voluntary participation from young children of different language backgrounds in learning Chinese through the use of games, music and the creative arts. In addition, it is also important to her that she partners parents to intrigue the children and to sustain their interests. 
     </p>  
+	 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
 </body></html>
