--- a/pages/陆小燕老师.md
+++ b/pages/陆小燕老师.md
@@ -48,6 +48,7 @@ max-width:100%;
     </p>
     <p style="text-align:justify;font-family:Lato,sans-serif;">Believing that children will enjoy learning Chinese when they have fun during the process, Ms Lu uses interesting and humorous content, as well as interesting games and musical activities to motivate the children in her class.</p>
 <p style="text-align:justify;font-family:Lato,sans-serif;">Her passion for teaching and intentionality in lesson design keeps her on the constant lookout for new ways to inspire children to learn Chinese, creating many special memories for the children in their journey of learning the language.
-    </p>  
+    </p>   
+	<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
 </body></html>
