--- a/pages/张俊楠老师.md
+++ b/pages/张俊楠老师.md
@@ -46,5 +46,6 @@ max-width:100%;
     <p style="text-align:justify;font-family:Lato,sans-serif;">Ms Zhang also provides many opportunities for collaborative and self-directed learning for the children through small group discussions and other activities. In addition, she values reflective thinking, and guides the children to reflect upon and evaluate their own learning for the day, helping them to grow into responsible learners.
     </p>
     <p style="text-align:justify;font-family:Lato,sans-serif;">A passionate pre-school Chinese Language teacher, Ms Zhang’s lessons are lively and captivating, creating a joyful learning experience for the children. She also regularly introduces cultural arts, like poetry composition, Chinese chess, shadow puppetry and Chinese opera, so that the children have opportunities to experience and appreciate the Chinese culture for themselves.</p> 
+	 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
 </body></html>
