Update file: விளையாட்டின்வழியே மகிழ்ச்சியாகத் தமிழ் கற்றல்.md

--- a/pages/விளையாட்டின்வழியே மகிழ்ச்சியாகத் தமிழ் கற்றல்.md
+++ b/pages/விளையாட்டின்வழியே மகிழ்ச்சியாகத் தமிழ் கற்றல்.md
@@ -3,3 +3,7 @@ title: விளையாட்டின்வழியே மகிழ்ச்
 permalink: /tl-PCF-CCK-exhibition
 description: ""
 ---
+<h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;text-align:justify;">விளையாட்டின்வழியே மகிழ்ச்சியாகத் தமிழ் கற்றல்</h4>
+<img src="/images/tl-PCF-CCK-V3.jpg">
+<br>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
