--- a/pages/高中.md
+++ b/pages/高中.md
@@ -253,7 +253,7 @@ width:80%;
   <a href="https://www.ntu.edu.sg/hass/admissions/graduate-programmes/programmes-listing/detail/master-of-social-sciences-(china-and-global-governance)" target="_blank" class="btn01" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NTU Masters of Social Sciences in China and Global Governance</a>
   <br>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">高中华文课程数码资源</h4>
-<p style="font-size:25px;font-family:KaiTi;">新加坡学生学习平台 <span style="font-family: Lato,sans-serif;">(Singapore Student Learning Space) </span>为学生提供了丰富的学习资源。学生可以登录SLS，搜索各高中华文科目的学习资源。这些资源能让学生进行延伸学习或巩固所学，同时也能培养他们自主学习的能力。</p>
+<p style="font-size:25px;font-family:KaiTi;">新加坡学生学习平台 <span style="font-family: Lato,sans-serif;">(Singapore Student Learning Space) </span>为学生提供了丰富的学习资源。学生可以登录 <span style="font-family: Lato,sans-serif;">SLS </span>，搜索各高中华文科目的学习资源。这些资源能让学生进行延伸学习或巩固所学，同时也能培养他们自主学习的能力。</p>
    <br />
 <div class="rowvideo">
  <div class="columnvideo">
