--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -73,7 +73,7 @@ width:90%;
 <a href="/TL-PriSch/" class="btn" style="float:left;">Previous</a>
  <a href="/tl-preu/" class="btn" style="float:right;">Next</a>
  <br />
-<img src="/images/MTLS2022_TL_Header_Curriculum_V1_SecSch_Banner.jpg" />
+<img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_Banner.jpg" />
 <center><p style="vertical-align:middle;">
  <a href="#C5" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0;">அறிமுகம்</a>
  <a href="#C1" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0; text-align:center;">உயர்நிலைப் பாடக்கலைத்திட்டங்கள்</a>
@@ -110,13 +110,13 @@ width:90%;
  <h4 style="font-family:Anjal New InaiMathi Sch Book; font-size:28px; font-weight:bold; color:black; text-align:left;">பாடநூல், பயிற்சிநூல் </h4>
   <img src="/images/Tl-Sec-Gif.gif" style="width:80%;" /><br />
 	<img src="/images/TL-Sec-Gif-1.gif" style="width:80%;" /><br />
-  <img src="/images/MTLS2022_TL_Curriculum_V1_SecSch_1.jpg" /><br />
-<img src="/images/MTLS2022_TL_Curriculum_V1_SecSch_2.jpg" /><br />
-  <img src="/images/MTLS2022_TL_Curriculum_V1_SecSch_3.jpg" />
+  <img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_1.jpg" /><br />
+<img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_2.jpg" /><br />
+  <img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_3.gif" />
   <h2 id="C4" style="font-family:Anjal New InaiMathi Sch Book; font-size:30px; font-weight:bold; text-align:center;">புதிய கூறுகளும் புதிய முயற்சிகளும் </h2>
  <img src="/images/tl-sec_poster05.jpg" /><br /> 
  <h2 id="C9" style="font-family:Anjal New InaiMathi Sch Book;  font-size:36px; font-weight:bold; text-align:center;">பண்பாட்டறிவை வளப்படுத்துதல்</h2>
-  <img src="/images/MTLS2022_TL_Curriculum_V1_SecSch_4.jpg" />
+  <img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_4.jpg" />
   <h2 id="C10" style="font-family:Anjal New InaiMathi Sch Book;  font-size:30px; font-weight:bold; text-align:center;">இலக்கியப் பனுவல்களின் வாயிலாக மொழி ஈடுபாட்டை வளர்த்தல் </h2>
 <p style="font-family:Anjal New InaiMathi Sch Book; text-align:justify; padding: 8px; font-size:24px;">மாணவர்களின் மொழியறிவுக்கு ஏற்ற நல்ல இலக்கியப் பனுவல்கள் கற்பனையாற்றலைத் தூண்டி நூல் படித்தலில் ஈடுபாட்டை வளர்க்கும். அதனால், அவர்களின் மொழி கற்றல் மேம்பட்டு, அவர்கள் தமிழ் நூல்களை விரிவாகப் படிக்கத் தொடங்குவார்கள்.<br />
  <br />
