--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -60,7 +60,7 @@ Ms Wang Zheng  <br/>
 	Mediacorp Anchor </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
+ <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">观看视频</a></td>
     </tr>
 </table>
 	<h4 style="font-family:Lato,sans-serif;"><b>Storytelling Sessions</b></h4>
