--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -60,7 +60,7 @@ Ms Wang Zheng  <br/>
 	Mediacorp Anchor </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:KaiTi;font-size: 22px">观看视频</a></td>
+ <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a></td>
     </tr>
 </table>
 	<h4 style="font-family:Lato,sans-serif;"><b>Storytelling Sessions</b></h4>
@@ -75,7 +75,7 @@ Ms Wang Zheng  <br/>
 Collection Planning and Development,  National Library Board</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Ms-Melissa-Choo-See-Check" class="btn1" style="color:#fff;font-family:KaiTi;font-size: 22px">观看视频</a>
+ <a href="/Ms-Melissa-Choo-See-Check" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a>
 </td>
     </tr>
 </table>
@@ -90,7 +90,7 @@ Collection Planning and Development,  National Library Board</span></td>
 		Senior Manager (Education), Mandai Wildlife Group </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Ms-Ong-Peiying" class="btn1" style="color:#fff;font-family:KaiTi;font-size: 22px">观看视频</a>
+ <a href="/Ms-Ong-Peiying" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a>
  </td>
     </tr>
 </table>
@@ -107,7 +107,7 @@ Mdm Jiang Yanyan  <br/>
  Recipient of Distinguished Chinese Language Teachers Awards 2021 </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Mdm-Jiang-Yanyan" class="btn1" style="color:#fff;font-family:KaiTi;font-size: 22px">观看视频</a>
+ <a href="/Mdm-Jiang-Yanyan" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a>
 </td>
     </tr>
 </table>
@@ -121,7 +121,7 @@ Ms Siau Jiahui <br/>
 	Mediacorp YES 933DJ</span> </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Ms-Siau-Jiahui" class="btn1" style="color:#fff;font-family:KaiTi;font-size: 22px">观看视频</a>
+ <a href="/Ms-Siau-Jiahui" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a>
 </td>
     </tr>
 </table>
@@ -144,7 +144,7 @@ Mdm Cheah Sin Wei  <br/>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">	
- <a href="/Pre-Recorded-Sessions" class="btn1" style="color:#fff;font-family:KaiTi;font-size: 22px">观看视频</a>
+ <a href="/Pre-Recorded-Sessions" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a>
  </td>
     </tr>
 </table>
@@ -159,7 +159,7 @@ Mdm Corinne Madelyn Fan Wai Foong  <br/>
 		Lecturer, NIEC-NP   </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Mdm-Corinne-Madelyn" class="btn1" style="color:#fff;font-family:KaiTi;font-size: 22px">观看视频</a>
+ <a href="/Mdm-Corinne-Madelyn" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a>
 </td>
     </tr>
 </table>
@@ -174,7 +174,7 @@ Professor Wu Nianyang   <br/>
 	 Professor, Shanghai Normal University, School of Education  </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Professor-Wu-Nian-Ying" class="btn1" style="color:#fff;font-family:KaiTi;font-size: 22px;">观看视频</a>
+ <a href="/Professor-Wu-Nian-Ying" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a>
 </td>
     </tr>
 </table>
@@ -186,10 +186,10 @@ Professor Wu Nianyang   <br/>
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">从学前到小学，为孩童打造积极的华文学习体验<br/>
   <span style="font-family:Lato,sans-serif; font-size:18px">[Hybrid Sharing Sessions (For Educators) from 11.30am to 12.30pm]<br/><br/>
 Dr Zheng Yingjiang   <br/>
-		Master Teacher, AST, SCCL (Teacher-in-Residence at Blangah Rise Primary School and MK)  </span></td>
+		Master Teacher, AST, SCCL (Teacher-in-Residence at Blangah Rise Primary School and MK) </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Dr-Zheng-Yingjiang" class="btn1" style="color:#fff;font-family:KaiTi;font-size: 22px;">观看视频</a></td>
+ <a href="/Dr-Zheng-Yingjiang" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a></td>
     </tr>
 </table>
 	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
