--- a/pages/高中.md
+++ b/pages/高中.md
@@ -187,10 +187,10 @@ width:80%;
 </h4>
   <div class="clearfix">
   <div class="img-container1">
- <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3cll-syllabus.pdf?la=en&hash=3D0B0283BCFB6BCEE253077B44A97CE1FA28F619" class="btn1" style="color:#fff;font-family:KaiTi;">H2/H3华文与文学课程标准:</a>
+ <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3cll-syllabus.pdf?la=en&hash=3D0B0283BCFB6BCEE253077B44A97CE1FA28F619" class="btn1" style="color:#fff;font-family:KaiTi;">H2/H3华文与文学课程标准</a>
   </div>
    <div class="img-container1">
- <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3mtll-syllabus.pdf?la=en&hash=5E5872607A094E2A64EB0D96A419FBA86CCAB8AE" class="btn2" style="color:#fff;font-family:Lato,sans-serif;">H2/H3 Mother Tongue Language and Literature Syllabus Document:</a>
+ <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3mtll-syllabus.pdf?la=en&hash=5E5872607A094E2A64EB0D96A419FBA86CCAB8AE" class="btn2" style="color:#fff;font-family:Lato,sans-serif;">H2/H3 Mother Tongue Language and Literature Syllabus Document</a>
   </div>
   </div>
 <h4  style="font-size:35px;font-family:KaiTi;color:#d14165">大学相关科系链接：
