--- a/pages/高中.md
+++ b/pages/高中.md
@@ -63,6 +63,11 @@ img-container2 {
   width: 33.33%;
   padding: 5px;
 }
+	.img-container3 {
+  float: left;
+  width: 32%;
+  padding: 4px;
+}
 @media only screen and (max-width: 600px) {
  .img-container1  {
     width: 100%;
@@ -295,13 +300,13 @@ width:80%;
 </span></center>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">语特相关链接</h4>
 <div class="clearfix">
-  <div class="img-container">
+  <div class="img-container3">
  <a href="https://www.moe.gov.sg/page%20not%20found?item=%2fprogrammes%2fclep-jc&user=extranet%5cAnonymous&site=moe-website" target="_blank" class="btn9" style="color:#fff;font-family:KaiTi;">高中语特简介</a>
   </div>
-   <div class="img-container">
+   <div class="img-container3">
  <a href="https://sites.google.com/moe.edu.sg/preuclep" target="_blank" class="btn10" style="color:#fff;font-family:KaiTi;">高中语特网站</a>
   </div>
-   <div class="img-container">
+   <div class="img-container3">
  <a href="https://www.moe.gov.sg/financial-matters/awards-scholarships/programme-scholarships-pre-u" target="_blank" class="btn11" style="color:#fff;font-family:KaiTi;">教育部语特奖学金</a>
   </div>
   </div>
