--- a/pages/高中.md
+++ b/pages/高中.md
@@ -290,13 +290,13 @@ width:80%;
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译数码资源示例：[SLS 课件截图]</h4>
 <div class="row">
  <div class="column" style="float: left;width: 50%; padding: 5px;padding-left:20px;">
-  <img src="/images/CL-JC-Gif-2.gif" style="width:100%">
+	 <img src="/images/CL-JC-Gif-2.gif" style="width:100%"></div>
   <br>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">高中华文语文特选课程</h4>
-<img src="/images/MTLS2022_CL_Curriculum_V2_JC_7.jpg">
+<img src="/images/MTLS2022_CL_Curriculum_V2_JC_7.jpg" style="width:100%;">
 <br/>
  <center>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/itpMdYJYzfc" frameborder="0" class="iframe1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /><span style="color:#d14165;font-size:18px;font-family:KaiTi">语特三十纪念视频
+   <iframe width="642" height="365" src="https://www.youtube.com/embed/itpMdYJYzfc" frameborder="0" class="iframe1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /><span style="color:#d14165;font-size:18px;font-family:KaiTi">语特三十纪念视频
 </span></center>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">语特相关链接</h4>
 <div class="clearfix">
