--- a/pages/高中.md
+++ b/pages/高中.md
@@ -291,6 +291,7 @@ width:80%;
 <div class="row">
  <div class="column" style="float: left;width: 50%; padding: 5px;padding-left:20px;">
 	 <img src="/images/CL-JC-Gif-2.gif" style="width:100%"></div>
+	</div>
   <br>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">高中华文语文特选课程</h4>
 <img src="/images/MTLS2022_CL_Curriculum_V2_JC_7.jpg" style="width:100%;">
