--- a/pages/高中.md
+++ b/pages/高中.md
@@ -103,6 +103,16 @@ padding: 26px;
     display: block;
     margin-left: 26px;
   }
+	.btn3{
+    font-size: 18px;
+    font-family: KaiTi;
+    background-color:#d14165;
+    padding: 13px 8px;
+    border-radius: 6px;
+    text-align: center;
+    display: block;
+    margin-left: 26px;
+  }
   .btn8{
     font-size: 18px;
     font-family: KaiTi;
