--- a/pages/高中.md
+++ b/pages/高中.md
@@ -186,7 +186,7 @@ width:80%;
 <img src="/images/MTLS2022_CL_Curriculum_V2_JC_2.jpg" />
     <br />
      <center>
-   <iframe width="642" height="365" src="https://www.youtube.com/embed/r1_FRRzx0Tg" frameborder="0" class="iframe1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /><span style="color:#d14165;font-size:20px;font-family:KaiTi">华文主修的未来展望
+   <iframe width="642" height="365" src="https://www.youtube.com/embed/r1_FRRzx0Tg" frameborder="0" class="iframe1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /><span style="color:#d14165;font-size:20px;font-family:KaiTi;text-align:center;">华文主修的未来展望
 </span></center>
 <h4 id="C2" style="font-size:35px;font-family:KaiTi;color:#d14165;">H1华文与华文B
 </h4>
@@ -242,8 +242,7 @@ width:80%;
   </div>
   </div>
  <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译相关链接</h4>
-
- <a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">H2中国通识课程标准 [PDF]</a>
+<a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">H2中国通识课程标准 [PDF]</a>
  <br>
    <a href="https://www.mci.gov.sg/careers-grants/scholarship/scholarship/scholarships-offered" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">MCI奖学金链接</a>
 <br>
@@ -272,27 +271,31 @@ width:80%;
    <br />
 <div class="rowvideo">
  <div class="columnvideo">
+	  <center>
  <iframe width="645" height="361" src="https://www.youtube.com/embed/YngQbtjEUps" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:20px;font-family:KaiTi"> H1华文数码资源示例行 
-课堂活动</span>
+<span style="color:#d14165;font-size:20px;font-family:KaiTi;"> H1华文数码资源示例行 
+课堂活动</span></center>
    <br />
 </div>
  <div class="columnvideo">
+	  <center>
  <iframe width="645" height="361" src="https://www.youtube.com/embed/wLFDKHW4ogc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 华文B数码资源示例
-学生学习成果</span>
+ <span style="color:#d14165;font-size:20px;font-family:KaiTi;"> 华文B数码资源示例
+学生学习成果</span> </center>
    <br />
 </div></div>
 <div class="rowvideo">
  <div class="columnvideo">
+	  <center>
  <iframe width="645" height="361" src="https://www.youtube.com/embed/bMkJ4oFUkf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
  <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 语文课件：REAP策略
-课堂活动</span>
+课堂活动</span> </center>
    <br />
 </div>
  <div class="columnvideo">
+	  <center>
  <iframe width="645" height="361" src="https://www.youtube.com/embed/MYZ0v-4T4_Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 文学课件：修辞手法学生学习成果</span>
+ <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 文学课件：修辞手法学生学习成果</span> </center>
    <br />
 </div>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识数码资源示例: [SLS 课件截图]</h4>
