--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -77,8 +77,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/MK-Horizon-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;"> 阅览展板 </a>
+ <a href="/MK-Horizon-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -94,8 +94,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/MK-Wellington-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
+ <a href="/MK-Wellington-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -109,8 +109,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Genius-Hive-Preschool-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="/Genius-Hive-Exhibition" class="btn2" style="color:#fff;"> 阅览展板 </a>
+ <a href="/Genius-Hive-Preschool-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="/Genius-Hive-Exhibition" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -124,8 +124,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/My-First-Skool-Ang-Mo-Kio-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="/MTLS-MFS-AMK" class="btn2" style="color:#fff;"> 阅览展板 </a>
+ <a href="/My-First-Skool-Ang-Mo-Kio-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="/MTLS-MFS-AMK" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -139,8 +139,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/My-First-Skool-Boon-Lay-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="/cl-MFS-Boonlay-exhibition" class="btn2" style="color:#fff;">阅览展板 </a>
+ <a href="/My-First-Skool-Boon-Lay-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="/cl-MFS-Boonlay-exhibition" class="btn2" style="color:#fff;font-size:22px;">阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -151,13 +151,13 @@ text-decoration:none;
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">教之以礼 育之以德
    <br />慈济大爱幼教中心<br/>
-			<span style="font-family:Lato,sans-serif;font-size:20px;"> [Tzu Chi Great Love PreSchool]</span>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Tzu Chi Great Love PreSchool]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Tzu-Chi-Great-Love-Preschool-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
+ <a href="/Tzu-Chi-Great-Love-Preschool-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td></tr>
 		</table>
 	<br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
