--- a/_exhibits/华文学习展示区/中小学.md
+++ b/_exhibits/华文学习展示区/中小学.md
@@ -78,8 +78,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Woodgrove-Primary-School-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;"> 阅览展板 </a>
+ <a href="/Woodgrove-Primary-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -95,8 +95,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Maha-Bodhi-School-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
+ <a href="/Maha-Bodhi-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -110,8 +110,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Meridian-Primary-School-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="/MTLS-CPS-Exhibition" class="btn2" style="color:#fff;"> 阅览展板 </a>
+ <a href="/Meridian-Primary-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="/MTLS-CPS-Exhibition" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -125,8 +125,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Corporation-Primary-School-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="/MTLS-CPS-Exhibition" class="btn2" style="color:#fff;"> 阅览展板 </a>
+ <a href="/Corporation-Primary-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="/MTLS-CPS-Exhibition" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -140,8 +140,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/First-Toa-Payoh-Primary-School-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;">阅览展板 </a>
+ <a href="/First-Toa-Payoh-Primary-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -157,8 +157,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Punggol-Secondary-School-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
+ <a href="/Punggol-Secondary-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -174,8 +174,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Jurong-Secondary-School-synopses" class="btn1" style="color:#fff;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
+ <a href="/Jurong-Secondary-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
